tailwindcss css file path fixed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;1,400;1,800&display=swap"
     rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link href="/dist/output.css" rel="stylesheet">
+  <link href="./dist/output.css" rel="stylesheet">
   <title>Frontend Mentor | Age calculator app</title>
   <meta name="description" content="This is a solution to the Age calculator app challenge on Frontend Mentor">
   <meta name="og:title" property="og:title" content="Frontend Mentor | Age calculator app">
